crates/carta/tests/snapshots/golden_writer__beamer__figure__figure-no-alt.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\pandocbounded{\includegraphics[keepaspectratio]{pic.png}}
\end{frame}
